hphp/hack/test/full_fidelity/cases/test_alias_errors.php
<?hh
type foo as bar = blah; // error
newtype foo2 as bar2 = blah2; // legal
type foo3 = blah3; // legal
